# rename.txt

./: .gitignore  README.md  README.zh-TW.md  Readme.md  RenameViaTxt.py  pyproject.toml  rename_txt.py  renametxt.bat  requirements.txt  setup.cfg
.old_versions/v1/: README.md  rename_txt.bat  rename_txt.py  rename_txt_ep.bat
.old_versions/v2/: .gitignore  namedit.bat  namedit.py
.old_versions/v2/common/: json_yaml_style.py  yes.py
.old_versions/v3/: renametxt.py
.old_versions/v3/addons/: rta_naturalsize.py  rta_stattime.py
.old_versions/v3/renamming/: string_render.py
.old_versions/v3/utilities/: utilities.py
doc/: systemdesign.drawio
renametxt/: renametxt.bat  renametxt.py
renametxt/addons/: __init__.py  addons.py  addons_list.py  rta_abbreviation.py  rta_naturalsize.py  rta_stattime.py
renametxt/renamming/: renamming.py  string_render.py  tempedit.py
render_renamer/: __init__.py  cli.py
render_renamer/plugins/: __init__.py  _base.py  _registry.py  abbreviation.py  natural_size.py  stat_time.py
render_renamer/renaming/: __init__.py  renaming.py  renaming_item.py  render_string.py  temp_edit.py
render_renamer/utilities/: __init__.py  miscellaneous.py  rich_difference_strings.py
test/: addons_test.py
tests/: test_miscellaneous.py  test_plugin.py  test_plugin_registry.py  test_render_string.py  test_rich_difference_strings.py
