[project]
name = "render-rename"
version = "0.1.0"
description = "A tool to rename files using templates and plugins."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.0",
    "humanize>=4.13.0",
    "jinja2>=3.1.6",
    "pyyaml>=6.0.3",
    "rich>=14.1.0",
]

[dependency-groups]
dev = [
    "coverage>=7.10.7",
]

[tool.setuptools]
packages = [
  "render_renamer",
]

[project.scripts]
ren2 = "render_renamer.cli:cli.main"
